--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,6 +11,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-    <app-main></app-main>
+  <app-app></app-app>
 </body>
 </html>
